# iustadji

./: Cargo.toml  dars.json  doa.json  index.html  styles.css
iUstadji.app/Contents/: Info.plist
iUstadji.app/Contents/Resources/data/: settings.json
public/: dars.json  settings.json
src/: app.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/data/: dars.json
src-tauri/src/: main.rs
