[package]
name = "iustadji-mac-ui"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
leptos = { version = "0.6.9", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
serde_json = "1"
chrono = "0.4.35"
leptos_router = { version = "0.6.9", features = ["csr"] }
thaw = { version = "0.2.3", features = ["csr"] }

[workspace]
members = ["src-tauri"]
